

#ifndef LETI_ESOFT_25_26_B1_REPOSITORYFACTORY_H
#define LETI_ESOFT_25_26_B1_REPOSITORYFACTORY_H

#include <memory>
#include "SNSUserRepository.h"
#include "headers/domain/repositories/VaccinationCenterRepository.h"
#include "headers/domain/repositories/VaccineTypeRepository.h"
#include "VaccinationAppointmentRepository.h"
#include "UserArrivalRepository.h"
#include "headers/domain/repositories/VaccinationProcessRepository.h"
#include "headers/domain/repositories/WaitingRoomRepository.h"
#include "headers/domain/repositories/RecoveryRoomRepository.h"
#include "headers/domain/repositories/VaccineRepository.h"
class RepositoryFactory {
public:
    virtual ~RepositoryFactory() = default;

    /**
     * Returns a repository capable of persisting SNSUser objects.  The
     * returned pointer is shared to allow multiple services to reuse the
     * same repository instance.  Concrete factories decide which
     * implementation (e.g. in memory or database) is returned.
     */
    virtual std::shared_ptr<SNSUserRepository> getSNSUserRepository() = 0;
    virtual std::shared_ptr<VaccinationCenterRepository> getVaccinationCenterRepository() = 0;
    virtual std::shared_ptr<VaccineTypeRepository> getVaccineTypeRepository() = 0;
    virtual std::shared_ptr<VaccinationAppointmentRepository> getVaccinationAppointmentRepository() = 0;
    virtual std::shared_ptr<UserArrivalRepository> getUserArrivalRepository() = 0;
    virtual std::shared_ptr<VaccineRepository> getVaccineRepository() = 0;
    /**
     * Returns a repository capable of persisting vaccination process
     * records.  Concrete factories decide which implementation is
     * returned.
     */
    virtual std::shared_ptr<VaccinationProcessRepository> getVaccinationProcessRepository() = 0;

    /**
     * Returns a repository managing the waiting room.  This repository
     * allows removal of SNS users once they are vaccinated.
     */
    virtual std::shared_ptr<WaitingRoomRepository> getWaitingRoomRepository() = 0;

    /**
     * Returns a repository managing the recovery room.  This repository
     * allows assignment of SNS users after vaccination.
     */
    virtual std::shared_ptr<RecoveryRoomRepository> getRecoveryRoomRepository() = 0;


};

#endif // LETI_ESOFT_25_26_B1_REPOSITORYFACTORY_H