@startuml
'https://plantuml.com/class-diagram

hide circle
skinparam classAttributeIconSize 0


' ===== Enums / DTOs =====

class UserArrivalDTO {
    - int facilityID
    - int sns_user_number
}

class UserDTO {
}

class ListFacilityDTO {
    - facilitylist
}
' ===== UI Layer =====
class RegisterUserArrivalView {
    + void show()
}

class RegisterUserArrivalController {
    + listFacilities()
    + Result registerArrival(UserArrivalDTO dto)
    + vector<Facility> listFacilities()
    + getSNSUserSummary(snsNumber): optional<SNSUser>
}

class App {
    + std::shared_ptr<UserArrivalService> getUserArrivalService()
    + std::shared_ptr<RepositoryFactory> getRepositoryFactory();

 }

RegisterUserArrivalView ..> RegisterUserArrivalController
RegisterUserArrivalController ..> UserArrivalDTO
RegisterUserArrivalController ..> UserDTO
RegisterUserArrivalController ..> ListFacilityDTO
' ===== Service Layer =====
class UserArrivalService {
    + Result registerArrival(UserArrivalDTO dto)
    + bool isDuplicateArrival(...)
    + getCurrentDate()
}

RegisterUserArrivalController ..> UserArrivalService

interface UserArrivalRepository <<interface>> {
    + Result save(shared_ptr<UserArrival>)
    + bool exists(string snsUserNumber, string facilityId, Date day)

}

interface VaccinationCenterRepository <<interface>> {
  +virtual Result save(std::shared_ptr<Facility> obj)
  +virtual ~VaccinationCenterRepository() = default
  +findAll()
}

    class UserArrivalMemoryRepository{
    + vector<shared_ptr<UserArrival>> data
}

    interface SNSUserRepository <<interface>> {
      + save(SNSUser obj) : Result
      + findAll() : vector<shared_ptr<SNSUser>>
      + existsByPhoneNumber(phoneNumber : string) : bool
      + existsByEmail(email : string) : bool
      + existsByCitizenCardNumber(cc : string) : bool
      + existsBySNSUserNumber(number : string) : bool
      + findBySNSUserNumber(sns_user_number)
    }

UserArrivalMemoryRepository .up.|> UserArrivalRepository

interface RepositoryFactory <<interface>>  {
     + virtual std::shared_ptr<VaccinationCenterRepository> getVaccinationCenterRepository() = 0;
     + virtual shared_ptr<UserArrivalRepository> getUserArrivalRepository() = 0;
     + getSNSUserRepository(): shared_ptr<SNSUserRepository>

}


class MemoryRepositoryFactory {
     + getVaccinationCenterRepository(): VaccineCenterRepository
     + getSNSUserRepository(): SNSUserRepository
     + getUserArrivaRepository(): UserArrivalRepository
  }

App "1" -down-> "1" RepositoryFactory:  uses
App --> UserArrivalService: adopts
RepositoryFactory ..> UserArrivalRepository
UserArrivalService ..> UserArrivalRepository
UserArrivalService ..> VaccinationCenterRepository
UserArrivalService ..> SNSUserRepository
MemoryRepositoryFactory .up.|> RepositoryFactory
MemoryRepositoryFactory .right.> UserArrivalMemoryRepository

 abstract class UserArrival {
    - time_point arrival_time
    - shared_ptr<SNSUser> user
    - shared_ptr<Facility> facility
    UserArrival(time_point arrival_time, shared_ptr<UserArrival> user, shared_ptr<Facility> facility)
 }

UserArrivalRepository "1" --> "0..*" UserArrival : records >
@enduml
